# Vibecoding

./: .gitignore  setup-ollama-env.bat  start-ollama-cpu.bat  “知识内化”RAG 系统原始提示词.txt
.claude/: settings.local.json
MindLink/: 2026-04-29-mindlink-ai-design.md
classtst/: convert_superpowers_skills.ps1  index.html  script.js
docs/: MindLink-AI-阶段总结报告.md  用户对话记录-2026-05-08.md
docs/superpowers/plans/: 2026-05-08-mindlink-ai-implementation.md
docs/superpowers/specs/: 2026-05-08-mindlink-ai-redesign.md
mindlink-ai/: .gitignore  CLAUDE.md  package-lock.json  package.json
mindlink-ai/backend/: config.py  engine.py  main.py  models.py  pipeline.py  requirements.txt
mindlink-ai/frontend/: package-lock.json  package.json  tailwind.config.ts
mindlink-ai/src/app/: layout.tsx  page.tsx
mindlink-ai/src/lib/: constants.ts  types.ts
sandbox/: CMakeLists.txt  README.md  SANDBOX_VIBECODING_PLAN.md  implementation_plan.md  index.html  project_analysis.md  project_architecture.md  test_simulation.bat
sandbox/css/: style.css
sandbox/docs/: project-structure.md
sandbox/js/: elements.js  grid.js  main.js  physics.js  renderer.js  ui.js
sandbox/src/: main.cpp  main_fixed.cpp
sandbox/src/core/: Element.cpp  Element.h  Game.cpp  Game.h  Grid.cpp  Grid.h
sandbox/src/elements/: BurningWood.cpp  BurningWood.h  EmptyElement.cpp  EmptyElement.h  Fire.cpp  Fire.h  Sand.cpp  Sand.h  Water.cpp  Water.h  Wood.cpp  Wood.h
sandbox/src/utils/: Random.cpp  Random.h  Timer.cpp  Timer.h
开发文档/: 个人话知识系统设计文档.md
开发文档/.claude/: settings.local.json
(+52 files in other folders)
